[project]
name = "project1-байков-максим-м25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "lYoungunl",email = "max10129595@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
